vpc.tf
resource "aws_vpc" "dev" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"
  enable_dns_support = "true"
  enable_dns_hostnames = "true"
  enable_classiclink = "false"

  tags = {
    Name = "dev"
  }
}
resource "aws_subnet" "dev-public-1" {
  vpc_id     = aws_vpc.dev.id
  cidr_block = "10.0.1.0/24"
  map_public_ip_on_launch = "true"
  availability_zone = "ap-south-1a"
  tags = {
    Name = "dev-public-1"
  }
}
resource "aws_subnet" "dev-public-2" {
  vpc_id     = aws_vpc.dev.id
  cidr_block = "10.0.1.0/24"
  map_public_ip_on_launch = "true"
  availability_zone = "ap-south-1b"
  tags = {
    Name = "dev-public-2"
  }
}
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.dev.id

  tags = {
    Name = "gw"
  }
}
resource "aws_route_table" "dev-public" {
  vpc_id = aws_vpc.dev.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
}
  tags = {
    Name = "dev-public"
  }
  }

resource "aws_route_table_association" "dev-public-1-a" {
  subnet_id      = aws_subnet.dev-public-1.id
  route_table_id = aws_route_table.dev-public.id
}
resource "aws_route_table_association" "dev-public-2-a" {
  subnet_id      = aws_subnet.dev-public-2.id
  route_table_id = aws_route_table.dev-public.id
}
resource "aws_instance" "public_inst_1" {
  ami           = "ami-068257025f72f470d"
  instance_type = "t2.micro"
  subnet_id = "${aws_subnet.dev-public-1.id}"
  key_name = "master"
  tags = {
    Name = "public_inst_1"
  }
}
resource "aws_instance" "public_inst_2" {
  ami           = "ami-068257025f72f470d"
  instance_type = "t2.micro"
  subnet_id = "${aws_subnet.dev-public-2.id}"
  key_name = "master"
  tags = {
    Name = "public_inst_2"
  }

}
